--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "postcss": "^8.3.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "tailwind.macro": "^1.0.0-alpha.10",
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
