--- a/.example.env
+++ b/.example.env
@@ -1,1 +1,7 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# Read /docs/ENVIRONMENT.md for more information.
+
+DATABASE_NAME="superawesomename"
+DATABASE_SUPERUSER_USER="superawesomeuser"
+DATABASE_SUPERUSER_PASSWORD="supersecretpass"
+
+DATABASE_URL="postgresql://superawesomeuser:supersecretpass@localhost:5432/superawesomename?schema=public"
