--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,6 @@ services:
       POSTGRES_DB: "${DATABASE_NAME}"
       POSTGRES_USER: "${DATABASE_SUPERUSER_USER}"
       POSTGRES_PASSWORD: "${DATABASE_SUPERUSER_PASSWORD}"
+    ports: 
+      - "5432:5432/tcp"
+      - "5432:5432/udp"
