--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
+    "@types/node": "^16.11.3",
+    "@types/react": "^17.0.31",
     "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2"
+    "eslint-config-next": "11.1.2",
+    "typescript": "^4.4.4"
   }
 }
