--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@types/react": "^17.0.31",
     "eslint": "8.0.1",
     "eslint-config-next": "11.1.2",
+    "ts-node": "^10.3.1",
     "typescript": "^4.4.4"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
