--- a/package.json
+++ b/package.json
@@ -1,33 +1,23 @@
 {
-  "name": "react-app",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "type-check": "tsc"
   },
   "dependencies": {
+    "@nexus/schema": "^0.20.1",
     "@prisma/client": "^3.3.0",
-    "autoprefixer": "^10.3.7",
-    "next": "11.1.2",
-    "postcss": "^8.3.10",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "styled-components": "^5.3.3",
-    "tailwind.macro": "^1.0.0-alpha.10",
-    "tailwindcss": "^2.2.17"
+    "next": "latest",
+    "nexus-plugin-prisma": "^0.35.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/node": "^16.11.3",
-    "@types/react": "^17.0.31",
-    "eslint": "8.0.1",
-    "eslint-config-next": "11.1.2",
-    "ts-node": "^10.3.1",
-    "typescript": "^4.4.4"
-  },
-  "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "@types/node": "^12.12.21",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
+    "typescript": "4.0"
   }
 }
