--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "dependencies": {
     "@nexus/schema": "^0.20.1",
     "@prisma/client": "^3.3.0",
+    "apollo-server-micro": "^2.25.2",
+    "graphql": "^15.6.1",
+    "micro": "^9.3.4",
     "next": "latest",
+    "nexus": "^1.1.0",
     "nexus-plugin-prisma": "^0.35.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -18,6 +22,6 @@
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "typescript": "^4.4.4"
   }
 }
