--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@nexus/schema": "^0.20.1",
     "@prisma/client": "^3.3.0",
     "apollo-server-micro": "^2.25.2",
+    "autoprefixer": "^10.3.7",
     "graphql": "^15.6.1",
     "micro": "^9.3.4",
     "next": "latest",
     "nexus": "^1.1.0",
     "nexus-plugin-prisma": "^0.35.0",
+    "postcss": "^8.3.11",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3",
+    "tailwind.macro": "^1.0.0-alpha.10",
+    "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
