--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -18,13 +19,25 @@
 # misc
 .DS_Store
 *.pem
+!.vscode/launch.json.default
+*.tsbuildinfo
+*tmp.db
+.eslintcache
+.pnpm-store
+.pnpm-store/
+.vscode
+libquery_engine*
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn-error.log
+pnpm-debug.log
 
 # local env files
+.env*
+.env.local
 .env.local
 .env.development.local
 .env.test.local
@@ -32,3 +45,14 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# prisma
+.prisma
+build
+coverage
+dist
+dist/
+query-engine*
+sandbox
+tmp
+
