--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^17.0.1",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.3.11",
+    "prisma": "^3.3.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4.0"
   }
