--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@prisma/client": "^3.4.0",
     "@types/node": "^12.12.21",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
@@ -19,6 +21,6 @@
     "postcss": "^8.3.11",
     "prisma": "^3.3.0",
     "tailwindcss": "^2.2.19",
-    "typescript": "4.0"
+    "typescript": "^4.4.4"
   }
 }
