--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start",
     "type-check": "tsc"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+ },
   "dependencies": {
     "next": "latest",
     "react": "^17.0.2",
@@ -21,6 +24,7 @@
     "postcss": "^8.3.11",
     "prisma": "^3.3.0",
     "tailwindcss": "^2.2.19",
+    "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
   }
 }
